objects/gvp__Placement__c.object
<CustomObject>
    <description>National Account (Chain) Placements as determined by the lookup to Authorizations</description>
    <fields>
        <fullName>gvp__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Authorization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization</label>
        <referenceTo>gvp__Authorization__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Cases_on_Display__c</fullName>
        <label>Cases on Display</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Compliance__c</fullName>
        <label>Compliance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Authorized</fullName>
                    <default>true</default>
                    <label>Authorized</label>
                </value>
                <value>
                    <fullName>Mandated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_1__c</fullName>
        <label>Custom 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_2__c</fullName>
        <label>Custom 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_3__c</fullName>
        <label>Custom 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Option 1</fullName>
                </value>
                <value>
                    <fullName>Option 2</fullName>
                </value>
                <value>
                    <fullName>Option 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Custom_Checkbox_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Checkbox_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Checkbox 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_1__c</fullName>
        <label>Custom Fact 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Fact_2__c</fullName>
        <label>Custom Fact 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_1__c</fullName>
        <label>Custom Text 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Custom_Text_2__c</fullName>
        <label>Custom Text 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>gvp__Display_Location__c</fullName>
        <label>Display Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aisle</fullName>
                </value>
                <value>
                    <fullName>End Cap</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__Drink_Name__c</fullName>
        <label>Drink Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__End_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>gvp__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>gvp__New_Or_Not__c</fullName>
        <label>New Or Not</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>gvp__POS_Material__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Material</label>
        <referenceTo>gvp__POS_Material__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__POS_Placement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>POS Placement</label>
        <referenceTo>gvp__POS_Placement__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Placement_Name__c</fullName>
        <label>Placement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>gvp__Placement_Price__c</fullName>
        <label>Placement Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>gvp__Program__c.gvp__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>gvp__Program__c</referenceTo>
        <relationshipLabel>Placements</relationshipLabel>
        <relationshipName>Placements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>gvp__Scan_Amount__c</fullName>
        <label>Scan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gvp__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Placement</label>
    <listViews>
        <fullName>gvp__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>gvp__Account__c</columns>
        <columns>gvp__Authorization__c</columns>
        <columns>gvp__Details__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PLC-{00000000}</displayFormat>
        <label>Placement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Placements</pluralLabel>
    <recordTypes>
        <fullName>Air_Miles</fullName>
        <active>true</active>
        <description>Air Miles</description>
        <label>Air Miles</label>
    </recordTypes>
    <recordTypes>
        <fullName>Check_Out_Baskets</fullName>
        <active>true</active>
        <description>Check-Out Baskets</description>
        <label>Check-Out Baskets</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contest</fullName>
        <active>true</active>
        <description>Contest</description>
        <label>Contest</label>
    </recordTypes>
    <recordTypes>
        <fullName>End_Aisle_Display</fullName>
        <active>true</active>
        <description>End Aisle Display</description>
        <label>End Aisle Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>Front_End_Merchandising</fullName>
        <active>true</active>
        <description>Front-End Merchandising</description>
        <label>Front-End Merchandising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Mini_Thematic</fullName>
        <active>true</active>
        <description>Mini Thematic</description>
        <label>Mini Thematic</label>
    </recordTypes>
    <recordTypes>
        <fullName>Neck_Tag_Program</fullName>
        <active>true</active>
        <description>Neck Tag Program</description>
        <label>Neck Tag Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>POD_and_Hero_Displays</fullName>
        <active>true</active>
        <description>POD and Hero Displays</description>
        <label>POD and Hero Displays</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Extenders</fullName>
        <active>true</active>
        <description>Shelf Extenders</description>
        <label>Shelf Extenders</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shelf_Talker</fullName>
        <active>true</active>
        <description>Shelf Talker</description>
        <label>Shelf Talker</label>
    </recordTypes>
    <recordTypes>
        <fullName>Shopping_Cart</fullName>
        <active>true</active>
        <description>Shopping Cart</description>
        <label>Shopping Cart</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trade_Advertising</fullName>
        <active>true</active>
        <description>Trade Advertising</description>
        <label>Trade Advertising</label>
    </recordTypes>
    <recordTypes>
        <fullName>Value_Add</fullName>
        <active>true</active>
        <description>Value-Add</description>
        <label>Value-Add</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__Backbar</fullName>
        <active>true</active>
        <label>Backbar</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__Display</fullName>
        <active>true</active>
        <label>Display</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__LTO</fullName>
        <active>true</active>
        <label>LTO</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__Permanent_Menu</fullName>
        <active>true</active>
        <label>Perm Menu</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__Scan</fullName>
        <active>true</active>
        <label>Scan</label>
    </recordTypes>
    <recordTypes>
        <fullName>gvp__TPR</fullName>
        <active>true</active>
        <label>TPR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>